Fixed spacing issue in the search page header.

--- a/tweetsneak_python/static/css/styles.css
+++ b/tweetsneak_python/static/css/styles.css
@@ -12,18 +12,11 @@ body{
 #logo_small{
     width:100px;
     height:75px;
-    float:left;
-    margin-left:50px;
 }
 
 #logo:hover{
     transform:rotateY(180deg);
     -webkit-transform:rotateY(180deg);
-}
-
-#search_title{
-    display:inline-block;
-    float:left;
 }
 
 .tweet_container{
